2009-02-14  Hans Breuer  <hans@breuer.org>

	* app/preferences.[ch] app/display.c : allow to configure the initial
	mainpoint magnetism, aka. "Snap to Object", bug #571724

	* app/diagram.c(diagram_load_into) : cleanup to remember the original
	path of an import file (bug #570862) and also avoid to not simply save
	the newly created diagram without asking for confirmation of the 
	filename. Also reflect the filename in the window title.

	* plug-ins/wmf/wmf_gdi.h : define LPCWSTR type, bug #571125

2009-02-08  Hans Breuer  <hans@breuer.org>

	[warningectomy - about 30 left]
	* configure.in : disable -Wunused, add a lot more useful, see:
	http://blogs.gnome.org/otte/2008/12/22/warning-options/
	* lib/dia_xml.c plug-ins/svg/render_svg.c : pointers differ in signedness
	* lib/diagramdata.c : declared static but never defined
	* lib/prop_dict.c lib/plug-ins.c : unused variable
	* plug-ins/python/diamodule.c : dereferencing type-punned pointer will
	break strict-aliasing rules, unused variables
	* plug-ins/custom_line/line_info.c : mostly pointer targets differ in 
	signedness, but also some superfluous allocations
	* lib/prop_sdarray.c lib/prefs.c objects/standard/line.c 
	  plug-ins/libart/dialibartrenderer.[ch] plug-ins/libart/render_libart.c
	  objects/AADL/aadl.c app/layer_dialog.c : no previous prototype 
	(aka: should be static, prototyped or deleted)
	* plug-ins/dxf/autocad_pal.c : maybe used uninitialized
	* app/confirm.c : format not a string literal and no format arguments
	* plug-ins/postscript/paginate_psprint.c : use g_object_(g|s)et_data()
	* (diagram_print_ps) : format not a string literal and no format arguments
	  and g_free(g_get_home_dir()) - agood reason for crashing later on
	* app/load_save.c(diagram_data_save) : may be used uninitialized
	* objects/UML/association.c : removed unused functions
	* app/exit_dialog.c : unused variable, format not a string literal and 
	no format arguments